--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -13,6 +14,9 @@
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" rel="stylesheet">
         <!-- SimpleLightbox plugin CSS-->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -24,13 +28,13 @@
             <div class="container px-4 px-lg-5">
                 <a class="navbar-brand" href="#page-top">Kerbal Insanity</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
+                <div class="collapse navbar-collapse" id="navbarResponsive" style="margin: 10px; padding-right: 20px;">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#page-top">About Kerbal Insanity</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Features</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about">Download</a></li>
                     </ul>
                 </div>
+                <button class="button-85" role="button" href="#services">Download</button>
             </div>
         </nav>
         <!-- Masthead-->
@@ -39,11 +43,11 @@
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
                         <h1 class="text-white font-weight-bold">Enjoy your expierence in Kerbal Space Program like never before!</h1>
-                        <hr class="divider" />
+                        <hr class="divider divider-light" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75 mb-5">Easily install and manage your mods in Kerbal Insanity Client</p>
-                        <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
+                        <button class="button-85" role="button" href="#about">Download da shit right now</button>
                     </div>
                 </div>
             </div>
@@ -56,42 +60,42 @@
                         <h2 class="text-white mt-0">Download Kerbal Insanity for free!</h2>
                         <hr class="divider divider-light" />
                         <p class="text-white-75 mb-4">Enjoy your Kerbal Space Program in one place!</p>
-                        <a class="btn btn-light btn-xl" href="#services">Download da shit right now</a>
+                        <button class="button-85" role="button" href="#services">Download Kerbal Insanity</button>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Services-->
         <section class="page-section" id="services">
-            <div class="container px-4 px-lg-5">
-                <h2 class="text-center mt-0">Features</h2>
+            <div class="container w-100">
+                <h2 class="text-center text-black mt-0">Features</h2>
                 <hr class="divider" />
-                <div class="row gx-4 gx-lg-5">
-                    <div class="col-lg-3 col-md-6 text-center">
+                <div class="d-flex p-3 flex-row gap-3">
+                    <div class="col-lg-3 col-md-6 text-center outline-85 padding-x-xs">
                         <div class="mt-5">
-                            <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Bundled-in realistic graphics</h3>
+                            <div class="mb-2"><i class="bi-gem fs-1 text-muted"></i></div>
+                            <h3 class="h4 mb-2 text-white">Bundled-in realistic graphics</h3>
                             <p class="text-muted mb-0">Want to renew your old graphics? Try bundled-in realistic graphics!</p>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 text-center">
+                    <div class="col-lg-3 col-md-6 text-center outline-85 padding-x-xs">
                         <div class="mt-5">
-                            <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Up to Date</h3>
+                            <div class="mb-2"><i class="bi-laptop fs-1 text-muted"></i></div>
+                            <h3 class="h4 mb-2 text-white">Up to Date</h3>
                             <p class="text-muted mb-0">Our official repository is always up-to-date, so you can get the last versions of mods.</p>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 text-center">
+                    <div class="col-lg-3 col-md-6 text-center outline-85 padding-x-xs">
                         <div class="mt-5">
-                            <div class="mb-2"><i class="bi-globe fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Multiplayer</h3>
+                            <div class="mb-2"><i class="bi-globe fs-1 text-muted"></i></div>
+                            <h3 class="h4 mb-2 text-white">Multiplayer</h3>
                             <p class="text-muted mb-0">Yes, it's not a joke. With Kerbal Insanity, you can play Kerbal Space Program with your friends online.</p>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 text-center">
+                    <div class="col-lg-3 col-md-6 text-center outline-85 padding-x-xs">
                         <div class="mt-5">
-                            <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Donate us</h3>
+                            <div class="mb-2"><i class="bi-heart fs-1 text-muted"></i></div>
+                            <h3 class="h4 mb-2 text-white">Donate us</h3>
                             <p class="text-muted mb-0">Our work is supported by donations of our community. Donate now to support Kerbal Insanity development.</p>
                         </div>
                     </div>
@@ -106,8 +110,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="Project Name">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Realistic graphics</div>
-                                <div class="project-name">Screenshots from Kerbal Insanity v1.4.5</div>
+                                <div class="project-category text-black">Realistic graphics</div>
+                                <div class="text-black">Screenshots from Kerbal Insanity v1.4.5</div>
                             </div>
                         </a>
                     </div>
@@ -115,8 +119,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg" title="Project Name">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Differences</div>
-                                <div class="project-name">Comparing KMP1, KM2 with Kerbal Insanity</div>
+                                <div class="project-category text-black">Differences</div>
+                                <div class="text-black">Comparing KSP1, KS2 with Kerbal Insanity</div>
                             </div>
                         </a>
                     </div>
@@ -124,8 +128,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg" title="Project Name">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Realistic graphics</div>
-                                <div class="project-name">Screenshots from Kerbal Insanity v1.4.5</div>
+                                <div class="project-category text-black">Realistic graphics</div>
+                                <div class="text-black">Screenshots from Kerbal Insanity v1.4.5</div>
                             </div>
                         </a>
                     </div>
@@ -133,8 +137,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg" title="Project Name">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Realistic graphics</div>
-                                <div class="project-name">Screenshots from Kerbal Insanity v1.4.5</div>
+                                <div class="project-category text-black">Realistic graphics</div>
+                                <div class="text-black">Screenshots from Kerbal Insanity v1.4.5</div>
                             </div>
                         </a>
                     </div>
@@ -142,8 +146,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg" title="Project Name">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Mods</div>
-                                <div class="project-name">Screenshots from Kerbal Insanity v1.4.5</div>
+                                <div class="project-category text-black">Mods</div>
+                                <div class="text-black">Screenshots from Kerbal Insanity v1.4.5</div>
                             </div>
                         </a>
                     </div>
@@ -151,8 +155,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg" title="Project Name">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
                             <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Multiplayer</div>
-                                <div class="project-name">Screenshots from Kerbal Insanity v1.4.5 - online gameplay</div>
+                                <div class="project-category text-black">Multiplayer</div>
+                                <div class="text-black">Screenshots from Kerbal Insanity v1.4.5 - online gameplay</div>
                             </div>
                         </a>
                     </div>
@@ -161,7 +165,7 @@
         </div>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2025 NIGHTFOXIE & co. All rights are sucking dick.</div></div>
+            <div class="container px-4 px-lg-5"><div class="small text-center text-black">Copyright &copy; 2025 NIGHTFOXIE & co. All rights are sucking dick.</div></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
