--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive" style="margin: 10px; padding-right: 20px;">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#page-top">About Kerbal Insanity</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Features</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#services">Features</a></li>
                     </ul>
                 </div>
                 <button class="button-85" role="button" href="#services">Download</button>
@@ -52,6 +52,15 @@
                 </div>
             </div>
         </header>
+        <section class="page-section" id="services">
+            <div class="container w-100">
+                <h2 class="text-center text-black mt-0">Features</h2>
+                <hr class="divider" />
+                <div class="">
+                    
+                </div>
+            </div>
+        </section>
         <!-- About-->
         <section class="page-section bg-primary" id="about">
             <div class="container px-4 px-lg-5">
