--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
             <div class="container px-4 px-lg-5 h-100">
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
-                        <h1 class="text-white font-weight-bold">Enjoy your expierence in Kerbal Space Program like never before!</h1>
+                        <h1 class="text-white font-weight-bold">Kerbal Insanity</h1>
                         <hr class="divider divider-light" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5">Easily install and manage your mods in Kerbal Insanity Client</p>
+                        <p class="text-white-75 mb-5">Enjoy your expierence in Kerbal Space Program like never before!</p>
                         <button class="button-85" role="button" href="#download">Download da shit right now</button>
                     </div>
                 </div>
