features section fixed

--- a/index.html
+++ b/index.html
@@ -112,28 +112,31 @@
                 <h2 class="text-center text-black mt-0">Features</h2>
                 <hr class="divider" />
                 <div class="d-flex p-3 flex-row gap-3">
-                    <div class="col-lg-3 col-md-6 text-center outline-85 padding-x-xs">
+                    <div class="col-md-6 text-center outline-85 padding-x-xs">
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-gem fs-1 text-muted"></i></div>
                             <h3 class="h4 mb-2 text-white">Bundled-in realistic graphics</h3>
                             <p class="text-muted mb-0">Want to renew your old graphics? Try bundled-in realistic graphics!</p>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 text-center outline-85 padding-x-xs">
+                    <div class="col-md-6 text-center outline-85 padding-x-xs">
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-laptop fs-1 text-muted"></i></div>
                             <h3 class="h4 mb-2 text-white">Up to Date</h3>
                             <p class="text-muted mb-0">Our official repository is always up-to-date, so you can get the last versions of mods.</p>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 text-center outline-85 padding-x-xs">
+                    
+                </div>
+                <div class="d-flex p-3 flex-row gap-3">
+                    <div class="col-md-6 text-center outline-85 padding-x-xs">
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-globe fs-1 text-muted"></i></div>
                             <h3 class="h4 mb-2 text-white">Multiplayer</h3>
                             <p class="text-muted mb-0">Yes, it's not a joke. With Kerbal Insanity, you can play Kerbal Space Program with your friends online.</p>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 text-center outline-85 padding-x-xs">
+                    <div class="col-md-6 text-center outline-85 padding-x-xs">
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-heart fs-1 text-muted"></i></div>
                             <h3 class="h4 mb-2 text-white">Donate us</h3>
