final commit, finishing

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <hr class="divider" />
                 <div class="">
                     <div class="text-center outline-85 padding-x-xs">
-                        <p class="text-white text-muted mb-0">
+                        <p class="text-muted mb-0">
                             Kerbal Space Program (KSP) has long been a playground for space enthusiasts and creative minds. With its unique blend of science, engineering, and humor, it allows players to design, build, and launch spacecraft while tackling the challenges of physics and space exploration. However, for some, the base game isn’t enough. Enter <strong>Kerbal Insanity</strong>, a modified client for KSP that takes the experience to new heights—quite literally.<br><br>
             
                             <strong>What is Kerbal Insanity?</strong><br>
